@@ -1,2 +1,3 @@
 default.properties
 local.properties
+*.keystore
